# expenses-tracker

./: .coverage  .env.sample  .flaskenv  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  dev-notes.md  docker-compose.yaml  et-cli.py  init-db.sql  pyproject.toml
.github/workflows/: main.yml
migrations/versions/: 0fbfd2401aba_add_last_logout_at_for_user.py  1ff9197b3318_make_category_required_for_expense.py  659a7ab07069_add_user_table.py  8b1623551343_initial_migration.py  9abef2d769b4_add_category_table.py
reflections/: 2025-11-06-add-auth-register.md  2025-11-06-add-user.md
src/: __init__.py
src/models/: __init__.py  base.py  categories.py  expenses.py  users.py
src/schemas/: auth.py  base.py  categories.py  expenses.py
src/views/: auth.py  categories.py  expenses.py  utils.py
tests/: conftest.py  test_auth.py  test_expenses.py
